--- a/lesson9/index.html
+++ b/lesson9/index.html
@@ -10,10 +10,10 @@
 <body>
     <div class="container">
     <h1>Front end course</h1>
-    <ol>
-        <ul>Course Structure</ul>
-        <ul>Contact me</ul>
-    </ol>
+    <ul>
+        <li>Course Structure</li>
+        <li>Contact me</li>
+    </ul>
     <h2>Course structure</h2>
     <table>
         <tr>
