--- a/test/index.html
+++ b/test/index.html
@@ -5,14 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=d, initial-scale=1.0" />
     <title>Document</title>
-   
-     <link href="assets/css/style.css" rel="stylesheet" />
+
+    <link href="assets/css/style.css" rel="stylesheet" />
+    <link href="assets/css/noralize.css" rel="stylesheet" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
   </head>
   <body>
     <div class="container">
       <div class="block1" style="background-image: url('assets/img/img1.png')">
         <div class="block1__title">
-          <h1>Bhromaon</h1>
+          <h1>BHROMAON</h1>
           <p>Safe Travel Anywhere</p>
         </div>
 
@@ -32,31 +37,27 @@
       </div>
 
       <div class="block2">
-        <div class="menubar">
-          <div class="title">Bhromaon</div>
+        <div class="block2__menu">
+          <div class="block2__logo">Bhromaon</div>
 
-          <ul class="nav">
-            <li>who we are</li>
-            <li>what we do</li>
-            <li>Travel with us</li>
-            <li>Contact us</li>
-          </ul>
+          <div class="block2__menu">
+            <ul class="nav">
+              <li>who we are</li>
+              <li>what we do</li>
+              <li>Travel with us</li>
+              <li>Contact us</li>
+            </ul>
+          </div>
         </div>
       </div>
 
       <div
         class="block3"
-        style="background-image: url('assets/img/1.png')"
+        style="background-image: url('assets/img/block3.png')"
       >
         <div class="floated-imgs">
-          <img
-            src="assets/img/Image1.png"
-            class="houselake-img"
-          />
-          <img
-            src="assets/img/Image3.png"
-            class="mountain-img"
-          />
+          <img src="assets/img/Image1.png" class="houselake-img" />
+          <img src="assets/img/Image3.png" class="mountain-img" />
         </div>
         <div class="block3__title">Why choose Us</div>
         <div class="block3__parag">
@@ -71,30 +72,95 @@
         </div>
       </div>
 
-      <div class="block4">
-        <div class="block4__search">Search</div>
-        <div class="block4__select">Select Places</div>
-        <div class="block4__book">Book & Enjoy</div>
+      <div
+        class="block4"
+        style="background-image: url('assets/img/block4.png')"
+      >
+        <div class="block4__search">
+          <img src="assets/img/Search1.png" />
+          <div>Search</div>
+        </div>
+        <div class="block4__select">
+          <img src="assets/img/Search1.png" />
+          <div>Select Places</div>
+        </div>
+        <div class="block4__book">
+          <img src="assets/img/hand.png" />
+          <div>Book & Enjoy</div>
+        </div>
       </div>
 
       <div class="block5" style="background-image: url('assets/img/house.png')">
-        <div class="rectanglebox">
-          <div class="rectanglebox__title">Spain</div>
-          <div class="rectanglebox__subtitle">Grand Spain Madrid</div>
-          <div class="rectanglebox__paragrah">
+        <div class="block5box1">
+          <h2 class="block5box__title">Spain</h2>
+          <span class="block5box__subtitle">Grand Spain Madrid</span>
+          <p class="block5box__paragrah">
             But I must explain to you how all this mistaken idea of account
             to<br />
             denouncing pleasure and praising pain was account born and I<br />
             account will give you a complete account of the system
-          </div>
-          <div class="rectanglebox__button">
-            <input type="button" value="Book now" />
-          </div>
+          </p>
+
+          <button class="block5box__button">Book Now</button>
         </div>
       </div>
 
-      <div class="Block5"></div>
-      <div class="Block6"></div>
+      <div
+        class="block6"
+        style="background-image: url('assets/img/block6.png')"
+      >
+        <div class="block5box2">
+          <h2 class="block5box__title">Spain</h2>
+          <span class="block5box__subtitle">Grand Spain Madrid</span>
+          <p class="block5box__paragrah">
+            But I must explain to you how all this mistaken idea of account
+            to<br />
+            denouncing pleasure and praising pain was account born and I<br />
+            account will give you a complete account of the system
+          </p>
+
+          <button class="block5box__button">Book Now</button>
+        </div>
+      </div>
+
+      <div
+        class="block7"
+        style="background-image: url('assets/img/block7.png')"
+      >
+        <div class="block7__title">What Our Tourist Say</div>
+
+        <div class="box7">
+          <img src="assets/img/block7img2.png" />
+
+          <h1>Sam Sumon</h1>
+          <p>
+             But I must explain to you how all this mistaken idea of account to
+            <br />
+            denouncinpleasure and praising pain But I must explain to you how
+            all this<br />
+            mistaken idea of account to nai denouncing pleasure and praising
+            pain was <br />account born and I account will give you a complete
+            account of the system <br />was account born and I account will give
+            you a nai the complete account of the system
+          </p>
+        </div>
+      </div>
+
+      <div
+        class="block8"
+        style="background-image: url('assets/img/block8.png')"
+      >
+        <div class="block8__footer">
+          <h2>BHROMAON</h2>
+          <span>Safe Travel Anywhere</span>
+        </div>
+        <div class="block8_icons">
+          <a href="#" class="fa fa-facebook"></a>
+          <a href="#" class="fa fa-twitter"></a>
+          <a href="#" class="fa fa-linkedin"></a>
+          
+        </div>
+      </div>
     </div>
   </body>
 </html>
